# duplicaton

./: .gitignore  99-udev-backer.rules.in  Makefile  README.md  configure.ac  duplicaton.conf  duplicaton.mount.in  duplicaton.service  duplicaton.timer  duplicity-backup-runner  edit-fstab.yml.in  system-backup.service  system-backup.service.in
.github/workflows/: blank.yml
